--- a/package.json
+++ b/package.json
@@ -8,8 +8,10 @@
     "@testing-library/user-event": "^13.5.0",
     "framer-motion": "^11.2.10",
     "react": "^18.3.1",
+    "react-contenteditable": "^3.3.7",
     "react-dom": "^18.3.1",
     "react-scripts": "5.0.1",
+    "sanitize-html": "^2.13.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
