--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "react-contenteditable": "^3.3.7",
     "react-dom": "^18.3.1",
     "react-scripts": "5.0.1",
+    "react-to-pdf": "^1.0.1",
     "sanitize-html": "^2.13.0",
     "web-vitals": "^2.1.4"
   },
